hal/halsampler: add -N <compnname> option
needed to wait for this component
also rewrite using getopt(3)

--- a/man/man1/halsampler.1
+++ b/man/man1/halsampler.1
@@ -62,6 +62,9 @@ is not specified,
 .B halsampler
 will read continuously until it is killed.
 .TP
+.BI "-N " NAME
+sets an explicit HAL component name.
+.TP
 .B -t
 instructs 
 .B halsampler
