--- a/man/man9/pid.9
+++ b/man/man9/pid.9
@@ -44,12 +44,32 @@ Does the PID calculations for control loop \fIN\fR.
 \fBpid.\fIN\fB.command\fR float in
 The desired (commanded) value for the control loop.
 .TP
-\fBpid.\fIN\fB.command-deriv\fR float in
-The derivative of the desired (commanded) value for the control loop.  If no
-signal is connected then the derivative will be estimated numerically.
+\fBpid.\fIN\fB.Pgain\fR float in
+Proportional gain.  Results in a contribution to the output that is the error
+multiplied by \fBPgain\fR.
+.TP
+\fBpid.\fIN\fB.Igain\fR float in
+Integral gain.  Results in a contribution to the output that is the integral
+of the error multiplied by \fBIgain\fR.  For example an error of 0.02 that
+lasted 10 seconds would result in an integrated error (\fBerrorI\fR) of 0.2,
+and if \fBIgain\fR is 20, the integral term would add 4.0 to the output.
+.TP
+\fBpid.\fIN\fB.Dgain\fR float in
+Derivative gain.  Results in a contribution to the output that is the rate of
+change (derivative) of the error multiplied by \fBDgain\fR.  For example an
+error that changed from 0.02 to 0.03 over 0.2 seconds would result in an error
+derivative (\fBerrorD\fR) of of 0.05, and if \fBDgain\fR is 5, the derivative
+term would add 0.25 to the output.
 .TP
 \fBpid.\fIN\fB.feedback\fR float in
 The actual (feedback) value, from some sensor such as an encoder.
+.TP
+\fBpid.\fIN\fB.output\fR float out
+The output of the PID loop, which goes to some actuator such as a motor.
+.TP
+\fBpid.\fIN\fB.command-deriv\fR float in
+The derivative of the desired (commanded) value for the control loop.  If no
+signal is connected then the derivative will be estimated numerically.
 .TP
 \fBpid.\fIN\fB.feedback-deriv\fR float in
 The derivative of the actual (feedback) value for the control loop.  If no
@@ -67,9 +87,6 @@ velocity-dependent following error.
 \fBpid.\fIN\fB.error\fR float out
 The difference between command and feedback.
 .TP
-\fBpid.\fIN\fB.output\fR float out
-The output of the PID loop, which goes to some actuator such as a motor.
-.TP
 \fBpid.\fIN\fB.enable\fR bit in
 When true, enables the PID calculations.  When false, \fBoutput\fR is zero,
 and all internal integrators, etc, are reset.
@@ -81,6 +98,84 @@ index pulse, this pin should be connected to the index-enable signal.
 When this is not done, and FF1 is nonzero, a step change in the input
 command causes a single-cycle spike in the PID output.  On systems which use
 exactly one of the \fB-deriv\fR inputs, this affects the D term as well.
+.TP
+\fBpid.\fIN\fB.bias\fR float in
+\fBbias\fR is a constant amount that is added to the output.  In most cases
+it should be left at zero.  However, it can sometimes be useful to compensate
+for offsets in servo amplifiers, or to balance the weight of an object that
+moves vertically. \fBbias\fR is turned off when the PID loop is disabled,
+just like all other components of the output.  If a non-zero output is needed
+even when the PID loop is disabled, it should be added with an external HAL
+sum2 block.
+.TP
+\fBpid.\fIN\fB.FF0\fR float in
+Zero order feed-forward term.  Produces a contribution to the output that is
+\fBFF0\fR multiplied by the commanded value.  For position loops, it should
+usually be left at zero.  For velocity loops, \fBFF0\fR can compensate for
+friction or motor counter-EMF and may permit better tuning if used properly.
+.TP
+\fBpid.\fIN\fB.FF1\fR float in
+First order feed-forward term.  Produces a contribution to the output that
+\fBFF1\fR multiplied by the derivative of the commanded value.  For
+position loops, the contribution is proportional to speed, and can be used
+to compensate for friction or motor CEMF.  For velocity loops, it is
+proportional to acceleration and can compensate for inertia.  In both
+cases, it can result in better tuning if used properly.
+.TP
+\fBpid.\fIN\fB.FF2\fR float in
+Second order feed-forward term.  Produces a contribution to the output that is
+\fBFF2\fR multiplied by the second derivative of the commanded value.  For
+position loops, the contribution is proportional to acceleration, and can be
+used to compensate for inertia.  For velocity loops, it should usually be
+left at zero.
+.TP
+\fBpid.\fIN\fB.deadband\fR float in
+Defines a range of "acceptable" error.  If the absolute value of \fBerror\fR
+is less than \fBdeadband\fR, it will be treated as if the error is zero.
+When using feedback devices such as encoders that are inherently quantized,
+the deadband should be set slightly more than one-half count, to prevent
+the control loop from hunting back and forth if the command is between two
+adjacent encoder values.  When the absolute value of the error is greater
+than the deadband, the deadband value is subtracted from the error before
+performing the loop calculations, to prevent a step in the transfer function
+at the edge of the deadband.  (See \fBBUGS\fR.)
+.TP
+\fBpid.\fIN\fB.maxoutput\fR float in
+Output limit.  The absolute value of the output will not be permitted
+to exceed \fBmaxoutput\fR, unless \fBmaxoutput\fR is zero.  When the output
+is limited, the error integrator will hold instead of integrating, to prevent
+windup and overshoot.
+.TP
+\fBpid.\fIN\fB.maxerror\fR float in
+Limit on the internal error variable used for P, I, and D.  Can be used to
+prevent high \fBPgain\fR values from generating large outputs under conditions
+when the error is large (for example, when the command makes a step change).
+Not normally needed, but can be useful when tuning non-linear systems.
+.TP
+\fBpid.\fIN\fB.maxerrorD\fR float in
+Limit on the error derivative.  The rate of change of error used by the
+\fBDgain\fR term will be limited to this value, unless the value is
+zero.  Can be used to limit the effect of \fBDgain\fR and prevent large
+output spikes due to steps on the command and/or feedback.  Not normally
+needed.
+.TP
+\fBpid.\fIN\fB.maxerrorI\fR float in
+Limit on error integrator.  The error integrator used by the \fBIgain\fR
+term will be limited to this value, unless it is zero.  Can be used to prevent
+integrator windup and the resulting overshoot during/after sustained errors.
+Not normally needed.
+.TP
+\fBpid.\fIN\fB.maxcmdD\fR float in
+Limit on command derivative.  The command derivative used by \fBFF1\fR will
+be limited to this value, unless the value is zero.  Can be used to prevent
+\fBFF1\fR from producing large output spikes if there is a step change on the
+command.  Not normally needed.
+.TP
+\fBpid.\fIN\fB.maxcmdDD\fR float in
+Limit on command second derivative.  The command second derivative used by
+\fBFF2\fR will be limited to this value, unless the value is zero.  Can be
+used to prevent \fBFF2\fR from producing large output spikes if there is a
+step change on the command.  Not normally needed.
 .TP
 \fBpid.\fIN\fB.saturated\fR bit out
 When true, the current PID output is saturated.  That is,
@@ -94,101 +189,6 @@ When true, the current PID output is saturated.  That is,
 When true, the output of PID was continually saturated for this many seconds
 (\fBsaturated-s\fR) or periods (\fBsaturated-count\fR).
 .SH PARAMETERS
-.TP
-\fBpid.\fIN\fB.Pgain\fR float rw
-Proportional gain.  Results in a contribution to the output that is the error
-multiplied by \fBPgain\fR.
-.TP
-\fBpid.\fIN\fB.Igain\fR float rw
-Integral gain.  Results in a contribution to the output that is the integral
-of the error multiplied by \fBIgain\fR.  For example an error of 0.02 that
-lasted 10 seconds would result in an integrated error (\fBerrorI\fR) of 0.2,
-and if \fBIgain\fR is 20, the integral term would add 4.0 to the output.
-.TP
-\fBpid.\fIN\fB.Dgain\fR float rw
-Derivative gain.  Results in a contribution to the output that is the rate of
-change (derivative) of the error multiplied by \fBDgain\fR.  For example an
-error that changed from 0.02 to 0.03 over 0.2 seconds would result in an error
-derivative (\fBerrorD\fR) of of 0.05, and if \fBDgain\fR is 5, the derivative
-term would add 0.25 to the output.
-.TP
-\fBpid.\fIN\fB.bias\fR float rw
-\fBbias\fR is a constant amount that is added to the output.  In most cases
-it should be left at zero.  However, it can sometimes be useful to compensate
-for offsets in servo amplifiers, or to balance the weight of an object that
-moves vertically. \fBbias\fR is turned off when the PID loop is disabled,
-just like all other components of the output.  If a non-zero output is needed
-even when the PID loop is disabled, it should be added with an external HAL
-sum2 block.
-.TP
-\fBpid.\fIN\fB.FF0\fR float rw
-Zero order feed-forward term.  Produces a contribution to the output that is
-\fBFF0\fR multiplied by the commanded value.  For position loops, it should
-usually be left at zero.  For velocity loops, \fBFF0\fR can compensate for
-friction or motor counter-EMF and may permit better tuning if used properly.
-.TP
-\fBpid.\fIN\fB.FF1\fR float rw
-First order feed-forward term.  Produces a contribution to the output that
-\fBFF1\fR multiplied by the derivative of the commanded value.  For
-position loops, the contribution is proportional to speed, and can be used
-to compensate for friction or motor CEMF.  For velocity loops, it is
-proportional to acceleration and can compensate for inertia.  In both
-cases, it can result in better tuning if used properly.
-.TP
-\fBpid.\fIN\fB.FF2\fR float rw
-Second order feed-forward term.  Produces a contribution to the output that is
-\fBFF2\fR multiplied by the second derivative of the commanded value.  For
-position loops, the contribution is proportional to acceleration, and can be
-used to compensate for inertia.  For velocity loops, it should usually be
-left at zero.
-.TP
-\fBpid.\fIN\fB.deadband\fR float rw
-Defines a range of "acceptable" error.  If the absolute value of \fBerror\fR
-is less than \fBdeadband\fR, it will be treated as if the error is zero.
-When using feedback devices such as encoders that are inherently quantized,
-the deadband should be set slightly more than one-half count, to prevent
-the control loop from hunting back and forth if the command is between two
-adjacent encoder values.  When the absolute value of the error is greater
-than the deadband, the deadband value is subtracted from the error before
-performing the loop calculations, to prevent a step in the transfer function
-at the edge of the deadband.  (See \fBBUGS\fR.)
-.TP
-\fBpid.\fIN\fB.maxoutput\fR float rw
-Output limit.  The absolute value of the output will not be permitted
-to exceed \fBmaxoutput\fR, unless \fBmaxoutput\fR is zero.  When the output
-is limited, the error integrator will hold instead of integrating, to prevent
-windup and overshoot.
-.TP
-\fBpid.\fIN\fB.maxerror\fR float rw
-Limit on the internal error variable used for P, I, and D.  Can be used to
-prevent high \fBPgain\fR values from generating large outputs under conditions
-when the error is large (for example, when the command makes a step change).
-Not normally needed, but can be useful when tuning non-linear systems.
-.TP
-\fBpid.\fIN\fB.maxerrorD\fR float rw
-Limit on the error derivative.  The rate of change of error used by the
-\fBDgain\fR term will be limited to this value, unless the value is
-zero.  Can be used to limit the effect of \fBDgain\fR and prevent large
-output spikes due to steps on the command and/or feedback.  Not normally
-needed.
-.TP
-\fBpid.\fIN\fB.maxerrorI\fR float rw
-Limit on error integrator.  The error integrator used by the \fBIgain\fR
-term will be limited to this value, unless it is zero.  Can be used to prevent
-integrator windup and the resulting overshoot during/after sustained errors.
-Not normally needed.
-.TP
-\fBpid.\fIN\fB.maxcmdD\fR float rw
-Limit on command derivative.  The command derivative used by \fBFF1\fR will
-be limited to this value, unless the value is zero.  Can be used to prevent
-\fBFF1\fR from producing large output spikes if there is a step change on the
-command.  Not normally needed.
-.TP
-\fBpid.\fIN\fB.maxcmdDD\fR float rw
-Limit on command second derivative.  The command second derivative used by
-\fBFF2\fR will be limited to this value, unless the value is zero.  Can be
-used to prevent \fBFF2\fR from producing large output spikes if there is a
-step change on the command.  Not normally needed.
 .TP
 \fBpid.\fIN\fB.errorI\fR float ro (only if debug=1)
 Integral of error.  This is the value that is multiplied by \fBIgain\fR to produce the Integral term of the output.
