docs: update references inside manuals
manual links were updated to the proper `.asciidoc` references
documenting manual was made as a concept for starting with updating
the documenting process see machinekit/machinekit#100

--- a/src/Master_Integrator.asciidoc
+++ b/src/Master_Integrator.asciidoc
@@ -16,9 +16,9 @@ The LinuxCNC Team
 
 image::common/images/emc2-intro.*[]
 
-include::common/overleaf.txt[]
+include::common/overleaf.asciidoc[]
 
-include::common/Integrator_Concepts.txt[]
+include::common/Integrator_Concepts.asciidoc[]
 
 :leveloffset: 0
 
@@ -26,25 +26,25 @@ include::common/Integrator_Concepts.txt[]
 
 :leveloffset: 1
 
-include::install/Latency_Test.txt[]
+include::install/Latency_Test.asciidoc[]
 
-include::common/starting-emc.txt[]
+include::common/starting-emc.asciidoc[]
 
-include::config/ini_config.txt[]
+include::config/ini_config.asciidoc[]
 
-include::config/ini_homing.txt[]
+include::config/ini_homing.asciidoc[]
 
-include::config/lathe_config.txt[]
+include::config/lathe_config.asciidoc[]
 
-include::hal/haltcl.txt[]
+include::hal/haltcl.asciidoc[]
 
-include::config/emc2hal.txt[]
+include::config/emc2hal.asciidoc[]
 
-include::config/stepper.txt[]
+include::config/stepper.asciidoc[]
 
-include::hal/basic_hal.txt[]
+include::hal/basic_hal.asciidoc[]
 
-include::remap/structure.txt[]
+include::remap/structure.asciidoc[]
 
 :leveloffset: 0
 
@@ -52,15 +52,15 @@ include::remap/structure.txt[]
 
 :leveloffset: 1
 
-include::hal/pyvcp.txt[]
+include::hal/pyvcp.asciidoc[]
 
-include::hal/pyvcp_examples.txt[]
+include::hal/pyvcp_examples.asciidoc[]
 
-include::gui/gladevcp.txt[]
+include::gui/gladevcp.asciidoc[]
 
-include::gui/halui.txt[]
+include::gui/halui.asciidoc[]
 
-include::hal/halui_examples.txt[]
+include::hal/halui_examples.asciidoc[]
 
 :leveloffset: 0
 
@@ -68,27 +68,27 @@ include::hal/halui_examples.txt[]
 
 :leveloffset: 1
 
-include::hal/parallel_port.txt[]
+include::hal/parallel_port.asciidoc[]
 
-include::drivers/AX5214H.txt[]
+include::drivers/AX5214H.asciidoc[]
 
-include::drivers/GS2.txt[]
+include::drivers/GS2.asciidoc[]
 
-include::drivers/hostmot2.txt[]
+include::drivers/hostmot2.asciidoc[]
 
-include::drivers/motenc.txt[]
+include::drivers/motenc.asciidoc[]
 
-include::drivers/opto22.txt[]
+include::drivers/opto22.asciidoc[]
 
-include::drivers/pico_ppmc.txt[]
+include::drivers/pico_ppmc.asciidoc[]
 
-include::drivers/pluto_p.txt[]
+include::drivers/pluto_p.asciidoc[]
 
-include::drivers/servo_to_go.txt[]
+include::drivers/servo_to_go.asciidoc[]
 
-include::drivers/shuttlexpress.txt[]
+include::drivers/shuttlexpress.asciidoc[]
 
-include::drivers/GM.txt[]
+include::drivers/GM.asciidoc[]
 
 :leveloffset: 0
 
@@ -96,15 +96,15 @@ include::drivers/GM.txt[]
 
 :leveloffset: 1
 
-include::common/python-interface.txt[]
+include::common/python-interface.asciidoc[]
 
-include::motion/kinematics.txt[]
+include::motion/kinematics.asciidoc[]
 
-include::motion/tweaking_steppers.txt[]
+include::motion/tweaking_steppers.asciidoc[]
 
-include::motion/pid_theory.txt[]
+include::motion/pid_theory.asciidoc[]
 
-include::common/UnifiedBuild.txt[]
+include::common/UnifiedBuild.asciidoc[]
 
 :leveloffset: 0
 
@@ -112,11 +112,11 @@ include::common/UnifiedBuild.txt[]
 
 :leveloffset: 1
 
-include::ladder/ladder_intro.txt[]
+include::ladder/ladder_intro.asciidoc[]
 
-include::ladder/classic_ladder.txt[]
+include::ladder/classic_ladder.asciidoc[]
 
-include::ladder/ladder_examples.txt[]
+include::ladder/ladder_examples.asciidoc[]
 
 :leveloffset: 0
 
@@ -124,13 +124,13 @@ include::ladder/ladder_examples.txt[]
 
 :leveloffset: 1
 
-include::examples/pci_parallel_port.txt[]
+include::examples/pci_parallel_port.asciidoc[]
 
-include::examples/spindle.txt[]
+include::examples/spindle.asciidoc[]
 
-include::examples/mpg.txt[]
+include::examples/mpg.asciidoc[]
 
-include::examples/gs2_example.txt[]
+include::examples/gs2_example.asciidoc[]
 
 :leveloffset: 0
 
@@ -138,22 +138,20 @@ include::examples/gs2_example.txt[]
 
 :leveloffset: 1
 
-include::common/Stepper_Diagnostics.txt[]
+include::common/Stepper_Diagnostics.asciidoc[]
 
-include::common/Linux_FAQ.txt[]
+include::common/Linux_FAQ.asciidoc[]
 
-include::common/Glossary.txt[]
+include::common/Glossary.asciidoc[]
 
-include::common/GPLD_Copyright.txt[]
+include::common/GPLD_Copyright.asciidoc[]
 
-= LinuxCNC Build Configuration 
+= LinuxCNC Build Configuration
 
 
 :leveloffset: 1
 
-include::install/ConfigurationChanges.txt[]
+include::install/ConfigurationChanges.asciidoc[]
 // = Index
 
 // vim: set syntax=asciidoc:
-
-
