--- a/src/Master_Developer.asciidoc
+++ b/src/Master_Developer.asciidoc
@@ -10,22 +10,21 @@ Developer Manual V{lversion}, {localdate}
 
 image::common/images/emc2-intro.*[]
 
-include::common/overleaf.txt[]
+include::common/overleaf.asciidoc[]
 
 
 :leveloffset: 1
 
-include::code/Code_Notes.txt[]
+include::code/Code_Notes.asciidoc[]
 
-include::code/NML_Messages.txt[]
+include::code/NML_Messages.asciidoc[]
 
-include::code/Style_Guide.txt[]
+include::code/Style_Guide.asciidoc[]
 
-include::code/Contributing-to-LinuxCNC.txt[]
+include::code/Contributing-to-LinuxCNC.asciidoc[]
 
-include::common/Glossary.txt[]
+include::common/Glossary.asciidoc[]
 
-include::common/GPLD_Copyright.txt[]
+include::common/GPLD_Copyright.asciidoc[]
 
 // vim: set syntax=asciidoc:
-
