--- a/src/Master_HAL.asciidoc
+++ b/src/Master_HAL.asciidoc
@@ -1,3 +1,10 @@
+[cols="3*"]
+|===
+|
+|link:../DOCUMENTS.asciidoc[Back to the Documents index]
+|
+|===
+
 :lversion: {sys: cat ../VERSION}
 HAL Manual V{lversion}, {localdate}
 ===================================
@@ -73,6 +80,13 @@ include::drivers/servo_to_go.asciidoc[]
 include::drivers/GM.asciidoc[]
 
 include::common/GPLD_Copyright.asciidoc[]
+
+[cols="3*"]
+|===
+|
+|link:../DOCUMENTS.asciidoc[Back to the Documents index]
+|
+|===
 
 // = Index
 
