--- a/src/code/Style_Guide.asciidoc
+++ b/src/code/Style_Guide.asciidoc
@@ -232,10 +232,18 @@ e.g. float *x or int &i
 Implicit tests for zero should not be used except for boolean
 variables. e.g. if (spindle_speed != 0) NOT if (spindle_speed)
 
-Only loop control statements must be included in a for() construct.
-e.g. sum = 0; for (i = 0; i < 10; i++) { sum += value[i]; }
+Only loop control statements must be included in a for() construct:
 
-NOT for (i = 0, sum =0; i < 10; i++) sum += value[i];
+[source,c]
+----
+// good
+sum = 0;
+for (i = 0; i < 10; i++)
+    sum += value[i];
+// bad
+for (i = 0, sum =0; i < 10; i++)
+    sum += value[i];
+----
 
 Likewise, executable statements in conditionals must be avoided. e.g.
 if (fd = open(file_name) is bad.
