--- a/src/Master_Getting_Started.asciidoc
+++ b/src/Master_Getting_Started.asciidoc
@@ -1,3 +1,10 @@
+[cols="3*"]
+|===
+|
+|link:../DOCUMENTS.asciidoc[Back to the Documents index]
+|
+|===
+
 :lversion: {sys: cat ../VERSION}
 Getting Started V{lversion}, {localdate}
 ========================================
@@ -12,7 +19,7 @@ The LinuxCNC Team
 
 image::common/images/emc2-intro.*[]
 
-include::common/overleaf.txt[]
+include::common/overleaf.asciidoc[]
 
 :leveloffset: 0
 
@@ -20,26 +27,31 @@ include::common/overleaf.txt[]
 
 :leveloffset: 1
 
-include::common/System_Requirements.txt[]
+include::common/System_Requirements.asciidoc[]
 
-include::common/Getting_LinuxCNC.txt[]
+include::common/Getting_LinuxCNC.asciidoc[]
 
-include::common/Updating_LinuxCNC.txt[]
+include::common/Updating_LinuxCNC.asciidoc[]
 
-include::quickstart/stepper_quickstart.txt[]
+include::quickstart/stepper_quickstart.asciidoc[]
 
-include::config/stepconf.txt[]
+include::config/stepconf.asciidoc[]
 
-include::config/pncconf.txt[]
+include::config/pncconf.asciidoc[]
 
-include::config/copy_and_run.txt[]
+include::config/copy_and_run.asciidoc[]
 
-include::common/Linux_FAQ.txt[]
+include::common/Linux_FAQ.asciidoc[]
 
-include::common/GPLD_Copyright.txt[]
+include::common/GPLD_Copyright.asciidoc[]
+
+[cols="3*"]
+|===
+|
+|link:../DOCUMENTS.asciidoc[Back to the Documents index]
+|
+|===
 
 // = Index
 
 // vim: set syntax=asciidoc:
-
-
