--- a/src/Master_User.asciidoc
+++ b/src/Master_User.asciidoc
@@ -1,3 +1,10 @@
+[cols="3*"]
+|===
+|
+|link:../DOCUMENTS.asciidoc[Back to the Documents index]
+|
+|===
+
 :lversion: {sys: cat ../VERSION}
 User Manual V{lversion}, {localdate}
 ====================================
@@ -16,13 +23,13 @@ The LinuxCNC Team
 
 image::common/images/emc2-intro.*[]
 
-include::common/overleaf.txt[]
+include::common/overleaf.asciidoc[]
 
-include::common/userforeword.txt[]
+include::common/userforeword.asciidoc[]
 
-include::common/user_intro.txt[]
+include::common/user_intro.asciidoc[]
 
-include::common/User_Concepts.txt[]
+include::common/User_Concepts.asciidoc[]
 
 :leveloffset: 0
 
@@ -30,19 +37,19 @@ include::common/User_Concepts.txt[]
 
 :leveloffset: 1
 
-include::gui/selector.txt[]
+include::gui/selector.asciidoc[]
 
-include::gui/axis.txt[]
+include::gui/axis.asciidoc[]
 
-include::gui/ngcgui.txt[]
+include::gui/ngcgui.asciidoc[]
 
-include::gui/touchy.txt[]
+include::gui/touchy.asciidoc[]
 
-include::gui/tklinuxcnc.txt[]
+include::gui/tklinuxcnc.asciidoc[]
 
-include::gui/mini.txt[]
+include::gui/mini.asciidoc[]
 
-include::gui/keystick.txt[]
+include::gui/keystick.asciidoc[]
 
 :leveloffset: 0
 
@@ -50,36 +57,41 @@ include::gui/keystick.txt[]
 
 :leveloffset: 1
 
-include::gcode/machining_center.txt[]
+include::gcode/machining_center.asciidoc[]
 
-include::gcode/coordinates.txt[]
+include::gcode/coordinates.asciidoc[]
 
-include::gcode/tool_compensation.txt[]
+include::gcode/tool_compensation.asciidoc[]
 
-include::gcode/overview.txt[]
+include::gcode/overview.asciidoc[]
 
-include::gcode/gcode.txt[]
+include::gcode/gcode.asciidoc[]
 
-include::gcode/m-code.txt[]
+include::gcode/m-code.asciidoc[]
 
-include::gcode/o-code.txt[]
+include::gcode/o-code.asciidoc[]
 
-include::gcode/other-code.txt[]
+include::gcode/other-code.asciidoc[]
 
-include::examples/gcode.txt[]
+include::examples/gcode.asciidoc[]
 
-include::lathe/lathe-user.txt[]
+include::lathe/lathe-user.asciidoc[]
 
-include::gcode/rs274ngc.txt[]
+include::gcode/rs274ngc.asciidoc[]
 
-include::gui/image-to-gcode.txt[]
+include::gui/image-to-gcode.asciidoc[]
 
-include::common/Glossary.txt[]
+include::common/Glossary.asciidoc[]
 
-include::common/GPLD_Copyright.txt[]
+include::common/GPLD_Copyright.asciidoc[]
+
+[cols="3*"]
+|===
+|
+|link:../DOCUMENTS.asciidoc[Back to the Documents index]
+|
+|===
 
 // = Index
 
 // vim: set syntax=asciidoc:
-
-
