--- a/machinekit-documentation/documents-index.asciidoc
+++ b/machinekit-documentation/documents-index.asciidoc
@@ -3,9 +3,9 @@ Document index
 
 This document gathers the locations of the current available manuals.
 
-- link:src/Master_Getting_Started.asciidoc[Getting started manual]
-- link:src/Master_User.asciidoc[User manual]
-- link:src/Master_HAL.asciidoc[HAL manual]
-- link:src/Master_Integrator.asciidoc[Integrator manual]
-- link:src/Master_Developer.asciidoc[Developer manual]
-- link:src/Master_Documenting.asciidoc[Documenting manual]
+- link:index-getting-started.asciidoc[Getting started manual]
+- link:index-user.asciidoc[User manual]
+- link:index-HAL.asciidoc[HAL manual]
+- link:index-integrator.asciidoc[Integrator manual]
+- link:index-developer.asciidoc[Developer manual]
+- link:index-documenting.asciidoc[Documenting manual]
