docs: instructions for low-level collaborating
regarding machinekit/machinekit#100 these instructions in the
split up /docs should enable mortals to collaborate in a
non git-fu way. Paving the way to more knowledge and a lower
barrier in collaborating.

--- a/machinekit-documentation/index-documenting.asciidoc
+++ b/machinekit-documentation/index-documenting.asciidoc
@@ -5,13 +5,6 @@
 |
 |===
 
-:lversion: {sys: cat ../VERSION}
-Documenting Manual
-==================
-
-:lang: en
-:masterdir: {indir}
-
 
 GOAL: The Best Documented Project Ever
 ======================================
@@ -46,7 +39,7 @@ _How?_
 . read up on link:http://www.machinekit.io/docs/contributing/[contributing].
 . get a Github user account.
 . fork the machinekit-docs repo.
-. read these instructions
+. read link:documenting/documenting.asciidoc[these instructions].
 
 [cols="3*"]
 |===
