--- a/src/Master_Getting_Started_fr.asciidoc
+++ b/src/Master_Getting_Started_fr.asciidoc
@@ -12,16 +12,16 @@ image::common/images/emc2-intro.*[]
 
 The LinuxCNC Team
 
-include::common/overleaf_fr.txt[]
+include::common/overleaf_fr.asciidoc[]
 
-include::common/outdated-notice_fr.txt[]
-include::common/System_Requirements_fr.txt[]
-include::common/Getting_linuxcnc_fr.txt[]
-include::common/Updating_linuxcnc_fr.txt[]
-include::quickstart/stepper_quickstart_fr.txt[]
-include::config/stepconf_fr.txt[]
-include::config/pncconf_fr.txt[]
-include::common/Linux_FAQ_fr.txt[]
-include::common/GPLD_Copyright_fr.txt[]
+include::common/outdated-notice_fr.asciidoc[]
+include::common/System_Requirements_fr.asciidoc[]
+include::common/Getting_linuxcnc_fr.asciidoc[]
+include::common/Updating_linuxcnc_fr.asciidoc[]
+include::quickstart/stepper_quickstart_fr.asciidoc[]
+include::config/stepconf_fr.asciidoc[]
+include::config/pncconf_fr.asciidoc[]
+include::common/Linux_FAQ_fr.asciidoc[]
+include::common/GPLD_Copyright_fr.asciidoc[]
 // Index
 // vim: set syntax=asciidoc:
