--- a/src/Master_HAL_fr.asciidoc
+++ b/src/Master_HAL_fr.asciidoc
@@ -12,26 +12,24 @@ image::common/images/emc2-intro.*[]
 
 The LinuxCNC Team
 
-include::common/overleaf_fr.txt[]
+include::common/overleaf_fr.asciidoc[]
 
-include::common/outdated-notice_fr.txt[]
+include::common/outdated-notice_fr.asciidoc[]
 :leveloffset: 0
 = HAL
 :leveloffset: 1
-include::hal/intro_fr.txt[]
-include::hal/general_ref_fr.txt[]
-include::hal/basic_hal_fr.txt[]
-include::hal/tutorial_fr.txt[]
-include::hal/halshow_fr.txt[]
-include::hal/components_fr.txt[]
-include::hal/rtcomps_fr.txt[]
-include::hal/hal-examples_fr.txt[]
-include::hal/halui_fr.txt[]
-include::hal/comp_fr.txt[]
-include::hal/halmodule_fr.txt[]
+include::hal/intro_fr.asciidoc[]
+include::hal/general_ref_fr.asciidoc[]
+include::hal/basic_hal_fr.asciidoc[]
+include::hal/tutorial_fr.asciidoc[]
+include::hal/halshow_fr.asciidoc[]
+include::hal/components_fr.asciidoc[]
+include::hal/rtcomps_fr.asciidoc[]
+include::hal/hal-examples_fr.asciidoc[]
+include::hal/halui_fr.asciidoc[]
+include::hal/comp_fr.asciidoc[]
+include::hal/halmodule_fr.asciidoc[]
 
 // = Index
 
 // vim: set syntax=asciidoc:
-
-
