--- a/src/Master_Integrator_fr.asciidoc
+++ b/src/Master_Integrator_fr.asciidoc
@@ -12,57 +12,55 @@ image::common/images/emc2-intro.png[]
 
 The LinuxCNC Team
 
-include::common/overleaf_fr.txt[]
+include::common/overleaf_fr.asciidoc[]
 
-include::common/outdated-notice_fr.txt[]
-include::common/Integrator_Concepts_fr.txt[]
+include::common/outdated-notice_fr.asciidoc[]
+include::common/Integrator_Concepts_fr.asciidoc[]
 :leveloffset: 0
 = Configuration de LinuxCNC
 :leveloffset: 1
-include::install/Latency_Test_fr.txt[]
-include::config/ini_config_fr.txt[]
-include::config/ini_homing_fr.txt[]
-include::config/lathe_config_fr.txt[]
-include::hal/haltcl_fr.txt[]
-include::config/linuxcnc2hal_fr.txt[]
-include::config/stepper_fr.txt[]
+include::install/Latency_Test_fr.asciidoc[]
+include::config/ini_config_fr.asciidoc[]
+include::config/ini_homing_fr.asciidoc[]
+include::config/lathe_config_fr.asciidoc[]
+include::hal/haltcl_fr.asciidoc[]
+include::config/linuxcnc2hal_fr.asciidoc[]
+include::config/stepper_fr.asciidoc[]
 :leveloffset: 0
 = Interfaces graphiques utilisateur
 :leveloffset: 1
-include::hal/pyvcp_fr.txt[]
-include::hal/pyvcp_examples_fr.txt[]
-include::gui/gladevcp_fr.txt[]
+include::hal/pyvcp_fr.asciidoc[]
+include::hal/pyvcp_examples_fr.asciidoc[]
+include::gui/gladevcp_fr.asciidoc[]
 :leveloffset: 0
 
 = Notions avancées
 :leveloffset: 1
-include::common/python-interface.txt[]
-include::motion/kinematics_fr.txt[]
-include::motion/tweaking_steppers_fr.txt[]
-include::motion/pid_theory_fr.txt[]
+include::common/python-interface.asciidoc[]
+include::motion/kinematics_fr.asciidoc[]
+include::motion/tweaking_steppers_fr.asciidoc[]
+include::motion/pid_theory_fr.asciidoc[]
 :leveloffset: 0
 = La logique Ladder
 :leveloffset: 1
-include::ladder/ladder_intro_fr.txt[]
-include::ladder/classic_ladder_fr.txt[]
-include::ladder/ladder_examples_fr.txt[]
+include::ladder/ladder_intro_fr.asciidoc[]
+include::ladder/classic_ladder_fr.asciidoc[]
+include::ladder/ladder_examples_fr.asciidoc[]
 :leveloffset: 0
 = Exemples d'utilisation
 :leveloffset: 1
-include::examples/pci_parallel_port_fr.txt[]
-include::examples/spindle_fr.txt[]
-include::examples/mpg_fr.txt[]
-include::examples/gs2_example_fr.txt[]
+include::examples/pci_parallel_port_fr.asciidoc[]
+include::examples/spindle_fr.asciidoc[]
+include::examples/mpg_fr.asciidoc[]
+include::examples/gs2_example_fr.asciidoc[]
 :leveloffset: 0
 = Diagnostics & FAQ
 :leveloffset: 1
-include::common/Stepper_Diagnostics_fr.txt[]
-include::common/Linux_FAQ_fr.txt[]
-include::common/Glossary_fr.txt[]
-include::common/GPLD_Copyright.txt[]
+include::common/Stepper_Diagnostics_fr.asciidoc[]
+include::common/Linux_FAQ_fr.asciidoc[]
+include::common/Glossary_fr.asciidoc[]
+include::common/GPLD_Copyright.asciidoc[]
 
 // = Index
 
 // vim: set syntax=asciidoc:
-
-
