--- a/src/Master_User_fr.asciidoc
+++ b/src/Master_User_fr.asciidoc
@@ -12,42 +12,40 @@ image::common/images/emc2-intro.*[]
 
 The LinuxCNC Team
 
-include::common/overleaf_fr.txt[]
+include::common/overleaf_fr.asciidoc[]
 
-include::common/outdated-notice_fr.txt[]
-include::common/userforeword_fr.txt[]
-include::common/user_intro_fr.txt[]
+include::common/outdated-notice_fr.asciidoc[]
+include::common/userforeword_fr.asciidoc[]
+include::common/user_intro_fr.asciidoc[]
 :leveloffset: 0
 = Les interfaces utilisateur
 :leveloffset: 1
-include::gui/axis_fr.txt[]
-include::gui/ngcgui_fr.txt[]
-include::gui/touchy_fr.txt[]
-include::gui/tklinuxcnc_fr.txt[]
-include::gui/mini_fr.txt[]
-include::gui/keystick_fr.txt[]
+include::gui/axis_fr.asciidoc[]
+include::gui/ngcgui_fr.asciidoc[]
+include::gui/touchy_fr.asciidoc[]
+include::gui/tklinuxcnc_fr.asciidoc[]
+include::gui/mini_fr.asciidoc[]
+include::gui/keystick_fr.asciidoc[]
 :leveloffset: 0
 
 = L'utilisation de LinuxCNC
 :leveloffset: 1
-include::common/User_Concepts_fr.txt[]
-include::gcode/machining_center_fr.txt[]
-include::gcode/coordinates_fr.txt[]
-include::gcode/tool_compensation_fr.txt[]
-include::gcode/overview_fr.txt[]
-include::gcode/gcode_fr.txt[]
-include::gcode/m-code_fr.txt[]
-include::gcode/o-code_fr.txt[]
-include::gcode/other-code_fr.txt[]
-include::examples/gcode_fr.txt[]
-include::lathe/lathe-user_fr.txt[]
-include::gcode/rs274ngc_fr.txt[]
-include::gui/image-to-gcode_fr.txt[]
-include::common/Glossary_fr.txt[]
-include::common/GPLD_Copyright.txt[]
+include::common/User_Concepts_fr.asciidoc[]
+include::gcode/machining_center_fr.asciidoc[]
+include::gcode/coordinates_fr.asciidoc[]
+include::gcode/tool_compensation_fr.asciidoc[]
+include::gcode/overview_fr.asciidoc[]
+include::gcode/gcode_fr.asciidoc[]
+include::gcode/m-code_fr.asciidoc[]
+include::gcode/o-code_fr.asciidoc[]
+include::gcode/other-code_fr.asciidoc[]
+include::examples/gcode_fr.asciidoc[]
+include::lathe/lathe-user_fr.asciidoc[]
+include::gcode/rs274ngc_fr.asciidoc[]
+include::gui/image-to-gcode_fr.asciidoc[]
+include::common/Glossary_fr.asciidoc[]
+include::common/GPLD_Copyright.asciidoc[]
 
 // = Index
 
 // vim: set syntax=asciidoc:
-
-
