troff-to-asciidoc.py: fix bold/italic markup error
when \\fB\\fR is in the file without text coming after then the
output will be **** because the \\fR or end of the line will trigger
the last markup to be repeated.

--- a/src/hal/components/lincurve.9.asciidoc
+++ b/src/hal/components/lincurve.9.asciidoc
@@ -26,22 +26,22 @@ loadrt lincurve [count=__N__**|names=**__name1__**[,**__name2...__**]] [personal
 
 Performs a 1-dimensional lookup and interpolation. The x-val
 parameters must be monotonic, though identical adjacent values are allowed.
-(for example 0,0,0,10) for a 4-element curve. 
+(for example 0,0,0,10) for a 4-element curve.
 
-For input values less than the x-val-00 breakpoint the y-val-00 is returned. 
+For input values less  than the x-val-00 breakpoint the y-val-00 is returned.
 For x greater than the largest x-val-NN the yval corresponding to x-max is
 returned (ie, no extrapolation is performed.)
 
-Sample usage: loadrt lincurve count=3 personality=4,4,4 
+Sample usage: loadrt lincurve count=3 personality=4,4,4
 for a set of three 4-element curves.
 
 The axis breakpoints should be set in the lincurve.N.x-val-NN parameters using
-"setp", as should the corresponding y values. 
+"setp", as should the corresponding y values.
 
 
 ===== [[functions]]FUNCTIONS
 
-**lincurve.**__N__**** (requires a floating-point thread)
+**lincurve.**__N__ (requires a floating-point thread)
 
 
 
@@ -59,10 +59,10 @@ The output value, compatible with PID gains
 
 ===== [[parameters]]PARAMETERS
 
-lincurve.__N__**.x-val-**__MM__**** float rw  (MM=00..personality) 
+lincurve.__N__**.x-val-**__MM__ float rw  (MM=00..personality) 
 axis breakpoints
 
-lincurve.__N__**.y-val-**__MM__**** float rw  (MM=00..personality) 
+lincurve.__N__**.y-val-**__MM__ float rw  (MM=00..personality) 
 output values to be interpolated
 
 
