--- a/machinekit-documentation/index-getting-started.asciidoc
+++ b/machinekit-documentation/index-getting-started.asciidoc
@@ -1,7 +1,7 @@
 [cols="3*"]
 |===
 |
-|link:documents-index.asciidoc[Back to the Documents index]
+|link:documents-index.asciidoc[Back to the main Documents index]
 |
 |===
 
@@ -32,7 +32,7 @@ link:../src/common/GPLD_Copyright.asciidoc[]
 [cols="3*"]
 |===
 |
-|link:documents-index.asciidoc[Back to the Documents index]
+|link:documents-index.asciidoc[Back to the main Documents index]
 |
 |===
 
