--- a/machinekit-documentation/documents-index.asciidoc
+++ b/machinekit-documentation/documents-index.asciidoc
@@ -2,10 +2,21 @@ Document index
 ==============
 
 This document gathers the locations of the current available manuals.
+this is a small rework of the links of the Linuxcnc Master* manuals at
+link:../src[]
 
 - link:index-getting-started.asciidoc[Getting started manual]
 - link:index-user.asciidoc[User manual]
 - link:index-HAL.asciidoc[HAL manual]
 - link:index-integrator.asciidoc[Integrator manual]
 - link:index-developer.asciidoc[Developer manual]
+
+the Doumenting manual is new and is at this time a working document about
+the way the documenting is done.
+
 - link:index-documenting.asciidoc[Documenting manual]
+
+lastly here is a matrix so it's easier to find part of the documentation that
+is applicable to your project.
+
+- link:documentation-matrix.asciidoc[Documentation matrix]
