documentation-matrix: center header, rename integrating

--- a/machinekit-documentation/documentation-matrix.asciidoc
+++ b/machinekit-documentation/documentation-matrix.asciidoc
@@ -6,13 +6,13 @@
 |===
 
 .Documentation Matrix
-[cols="7*", options="header", center]
+[cols="7*", options="header", options="center"]
 |===
 |
 | Getting Started
 | Using
 | HAL
-| Integrating
+| Setting up
 | Developing
 | Documentiation
 
